# mcp-safe-fetch

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  PLAN.md  README.md  SCOPE.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
docs/install/: de.md  en.md  fr.md
docs/install/img/: README.md
src/: index.ts
src/mcp_safe_fetch/: __init__.py  __main__.py  sanitizer.py  search.py  server.py
tests/: test_sanitizer.py  test_search.py  test_server.py
